--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   install:
     commands:
       - echo "Instalando Docker..."
-      - amazon-linux-extras enable docker
+      - yum update -y
       - yum install -y docker
       - service docker start
       - usermod -a -G docker $USER
