--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,8 @@ phases:
       - echo "Instalando Docker..."
       - yum update -y
       - yum install -y docker
-      - service docker start
+      - systemctl start docker
+      - systemctl enable docker
       - usermod -a -G docker $USER
       - echo "Instalando dependencias adicionales..."
       - curl -L "https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
