--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,26 +26,27 @@ phases:
 
   pre_build:
     commands:
-      - echo "Iniciando Docker"
-      - nohup dockerd &>/var/log/dockerd.log &
-      - timeout 15 sh -c "until docker info; do echo 'Esperando a Docker...' && sleep 1; done"
       - echo "Iniciando sesión en Amazon ECR..."
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+
   build:
     commands:
-      - echo "Construyendo las imágenes Docker"
+      - echo "Construyendo las imágenes Docker..."
       - docker-compose build
-      - echo "Etiquetando y subiendo imágenes a ECR"
+      - echo "Etiquetando y subiendo imágenes a ECR..."
       - docker tag cliente:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY_CLIENTE:$IMAGE_TAG
       - docker tag servidor:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY_SERVIDOR:$IMAGE_TAG
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY_CLIENTE:$IMAGE_TAG
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY_SERVIDOR:$IMAGE_TAG
+
   post_build:
     commands:
+      - echo "Listando archivos del proyecto..."
+      - ls -al
       - echo "Inicializando Terraform..."
       - terraform init
       - echo "Seleccionando el workspace: $WORKSPACE"
-      - terraform workspace select $WORKSPACE || terraform workspace new $WORKSPACE
+      - terraform workspace select $WORKSPACE
       - echo "Planeando los cambios con Terraform en el workspace $WORKSPACE..."
       - terraform plan -out=tfplan
       - echo "Aplicando los cambios con Terraform en el workspace $WORKSPACE..."
