--- a/buildspec.yml
+++ b/buildspec.yml
@@ -56,6 +56,8 @@ phases:
       - terraform init
       - terraform workspace list
       - terraform workspace select $WORKSPACE
+      - echo "Seleccionando el workspace: '${WORKSPACE}'"
+
 artifacts:
   files:
     - "**/*"
