--- a/buildspec.yml
+++ b/buildspec.yml
@@ -56,7 +56,7 @@ phases:
       - terraform init
       - terraform workspace list
       - terraform workspace select $WORKSPACE
-      - echo "Seleccionando el workspace: '${WORKSPACE}'"
+      - echo "Seleccionando el workspace: ${WORKSPACE}"
 
 artifacts:
   files:
