--- a/buildspec.yml
+++ b/buildspec.yml
@@ -57,10 +57,7 @@ phases:
       - terraform workspace select $WORKSPACE
       - echo "Workspace donde se va a desplegar..."
       - terraform workspace show
-      - echo "Planeando la infraestructura con Terraform..."
-      - terraform plan -out=tfplan
-      - echo "Aplicando cambios con Terraform..."
-      - terraform apply -auto-approve tfplan
+      - terraform destroy -auto-approve tfplan
 
 
 artifacts:
