--- a/buildspec.yml
+++ b/buildspec.yml
@@ -57,7 +57,10 @@ phases:
       - terraform workspace select $WORKSPACE
       - echo "Workspace donde se va a desplegar..."
       - terraform workspace show
-      - terraform destroy -auto-approve
+      - echo "Planeando la infraestructura con Terraform..."
+      - terraform plan -out=tfplan
+      - echo "Aplicando cambios con Terraform..."
+      - terraform apply -auto-approve tfplan
 
 
 artifacts:
