--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,8 @@ env:
     ECR_REPOSITORY_CLIENTE: "cliente"
     ECR_REPOSITORY_SERVIDOR: "servidor"
     IMAGE_TAG: "latest"
-    TF_VAR_cliente_image: "public.ecr.aws/y5w8k0j6/cliente:latest"
-    TF_VAR_servidor_image: "public.ecr.aws/y5w8k0j6/servidor:latest"
+    TF_VAR_cliente_image: "${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/cliente:${IMAGE_TAG}"
+    TF_VAR_servidor_image: "${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/servidor:${IMAGE_TAG}"
     WORKSPACE: "prod"
    
 phases:
@@ -40,11 +40,11 @@ phases:
       - echo "Construyendo las imágenes Docker..."
       - docker-compose build
       - echo "Etiquetando imágenes para Amazon ECR..."
-      - docker tag cliente:latest public.ecr.aws/y5w8k0j6/cliente:latest
-      - docker tag servidor:latest public.ecr.aws/y5w8k0j6/servidor:latest
+      - docker tag cliente:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY_CLIENTE:$IMAGE_TAG
+      - docker tag servidor:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY_SERVIDOR:$IMAGE_TAG
       - echo "Subiendo imágenes a Amazon ECR..."
-      - docker push public.ecr.aws/y5w8k0j6/cliente:latest
-      - docker push servidor:latest public.ecr.aws/y5w8k0j6/servidor:latest
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY_CLIENTE:$IMAGE_TAG
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY_SERVIDOR:$IMAGE_TAG
 
   post_build:
     commands:
