--- a/buildspec.yml
+++ b/buildspec.yml
@@ -54,6 +54,7 @@ phases:
       - cd app
       - echo "Inicializando Terraform en el directorio 'app'..."
       - terraform init
+      - terraform workspace select $WORKSPACE
       - echo "Workspace donde se va a desplegar..."
       - terraform workspace show
       - echo "Planeando la infraestructura con Terraform..."
