--- a/buildspec.yml
+++ b/buildspec.yml
@@ -51,8 +51,8 @@ phases:
       - echo "Listando archivos del proyecto..."
       - ls -al
       - echo "Configurando acceso a Kubernetes..."
-      - aws eks update-kubeconfig --region $AWS_REGION --name $WORKSPACE
-      - kubectl config use-context arn:aws:eks:$AWS_REGION:$AWS_ACCOUNT_ID:cluster/$WORKSPACE
+      - aws eks update-kubeconfig --region us-east-1 --name test-simetric
+      - kubectl config use-context arn:aws:eks:us-east-1:585768158376:cluster/test-simetric
       - echo "Eliminando ConfigMap aws-auth existente (si aplica)..."
       - kubectl delete configmap aws-auth -n kube-system || echo "ConfigMap no existe o ya fue eliminado."
       - echo "Cambiando al directorio de Terraform (app)..."
