--- a/buildspec.yml
+++ b/buildspec.yml
@@ -88,6 +88,7 @@ phases:
       - cd app
       - echo "Inicializando Terraform en el directorio 'app'..."
       - terraform init
+      - terraform providers
       - terraform workspace select $WORKSPACE
       - echo "Workspace donde se va a desplegar..."
       - terraform workspace show
